@@ -3,6 +3,11 @@ All notable changes to this project will be documented in this file.
 This project adheres to Semantic Versioning.
 
 - Unreleased
+  - Added
+    - New command line for listing quests in a table
+      - /reckless list all
+      - This command is enabled by default, and can be used in combination with other commands that require information such as questID
+    - Compatibility with the addon Wide Quest List
 
 - v1.0.0 - 2021-05-31
   - Added
